sfdx-source/force-app/main/default/objects/WorkPlan/fields/Tertiary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Routing_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13591 : This flag indicates tertiary routing assignment.</description>
    <label>Tertiary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>