sfdx-source/force-app/main/default/objects/WorkPlan/fields/Tertiary_Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Routing_Queue__c</fullName>
    <description>LEM-13591 : Stores tertiary routing queue.</description>
    <label>Tertiary Routing Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>