sfdx-source/force-app/main/default/objects/WorkPlan/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-1874: It indicates type of Work Plan. It is used to identify the existing Work Plans on Work Order.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Plan_Type</valueSetName>
    </valueSet>
</CustomField>