sfdx-source/force-app/main/default/objects/WorkPlan/fields/Type_of_Menu_Update__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Menu_Update__c</fullName>
    <description>LEM-1683: The type of update(s) needed for Post-Sales menu update work order.</description>
    <formula>TEXT(WorkOrder.Type_of_Menu_Update__c)</formula>
    <label>Type of Menu Update</label>
    <type>Text</type>
</CustomField>