sfdx-source/force-app/main/default/objects/WorkPlan/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>LEM-4773: It indicates the Business Vertical value to be used on Work Plan list views.</description>
    <formula>WorkOrder.Vertical__c</formula>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>