sfdx-source/force-app/main/default/objects/WorkPlan/fields/Work_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-982: It indicates link of the Work Order record.</description>
    <formula>WorkOrder.Work_Order_Name_Link__c</formula>
    <label>Work Order Name</label>
    <type>Text</type>
</CustomField>