sfdx-source/force-app/main/default/objects/WorkPlan/fields/Work_Order_Provisional_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Provisional_Status__c</fullName>
    <description>As part of BASD-53808 created this field to display the provisioning status of WorkOrder on WorkPlan list view.</description>
    <formula>Text(WorkOrder.Provisioning_Status__c )</formula>
    <label>Work Order Provisional Status</label>
    <type>Text</type>
</CustomField>