sfdx-source/force-app/main/default/objects/WorkPlan/fields/Work_Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Sub_Type__c</fullName>
    <description>LEM-1271: Type of onboarding request.</description>
    <formula>TEXT(WorkOrder.Sub_Type__c)</formula>
    <inlineHelpText>Type of onboarding request</inlineHelpText>
    <label>Work Order Sub-Type</label>
    <type>Text</type>
</CustomField>