sfdx-source/force-app/main/default/objects/WorkPlan/fields/Work_Plan_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Completed_On__c</fullName>
    <description>Store Work Plan Completion Date</description>
    <label>Work Plan Completed On</label>
    <type>Date</type>
</CustomField>