sfdx-source/force-app/main/default/objects/WorkPlan/fields/Work_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan Template</label>
    <referenceTo>WorkPlanTemplate</referenceTo>
    <relationshipLabel>Work Plans</relationshipLabel>
    <relationshipName>Work_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>