sfdx-source/force-app/main/default/objects/WorkPlan/fields/Xref__c.field-meta.xml
<CustomField>
    <fullName>Xref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2203 Lookup to the Xref object that integrates this Store.</description>
    <label>Xref</label>
    <referenceTo>Xref__c</referenceTo>
    <relationshipLabel>Work Plans</relationshipLabel>
    <relationshipName>Work_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>