sfdx-source/force-app/main/default/objects/WorkPlan/listViews/Arcgate_Elite_Queue.listView-meta.xml
<ListView>
    <fullName>Arcgate_Elite_Queue</fullName>
    <columns>Name</columns>
    <columns>WorkOrder</columns>
    <columns>Work_Order_Name__c</columns>
    <columns>Work_Order_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Proposed_Date_of_Activation__c</columns>
    <columns>Proposed_Date_of_Menu__c</columns>
    <columns>Owner_Link__c</columns>
    <columns>Number_of_Workable_WorkSteps__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Work_Plan__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Menu_Vendor__c</field>
        <operation>equals</operation>
        <value>Arcgate</value>
    </filters>
    <label>Arcgate Elite Queue</label>
</ListView>