sfdx-source/force-app/main/default/objects/WorkPlan/listViews/Drive_Holding_WorkPlan.listView-meta.xml
<ListView>
    <fullName>Drive_Holding_WorkPlan</fullName>
    <columns>Name</columns>
    <columns>WorkOrder</columns>
    <columns>Work_Order_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Proposed_Date_of_Activation__c</columns>
    <columns>Owner_Link__c</columns>
    <columns>Number_of_Workable_WorkSteps__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Parent_Work_Plan__c</field>
        <operation>equals</operation>
    </filters>
    <label>Drive - Holding</label>
    <queue>Drive_Holding</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>